2004-04-21  Richard Kinder <r_kinder@yahoo.com>
	* drivemount.c: Fix bug #135179 - help not displaying from right
	click on the applet.

2004-03-17  Glynn Foster  <glynn.foster@sun.com>

	* Makefile.am: Fix installation of gconf schemas.

2004-03-16  Glynn Foster  <glynn.foster@sun.com>

	* help/Makefile.am: Add l10n'd docs to the build.

2004-03-15  Glynn Foster  <glynn.foster@sun.com>

	* help/*: Add localized documentation from the 
	Sun translation team for de, es, fr, it, ja, ko,
	sv, zh_CN, zh_HK and zh_TW.

2004-03-15  Glynn Foster  <glynn.foster@sun.com>
	
	* docs/*: Remove, they're all old and on other
	branches if we need them.

2004-02-23  Dennis Smit  <ds@nerds-incorporated.org>

	* properties.c (properties_show):
	Keep track of the dialog within 
	the DriveData structure so we can
	destroy it on instance destroy.

	Only allow one prop_dialog per instance
	and present user the dialog when he
	is re-requesting it.

	(handle_response_cb):
	Set prop_dialog to NULL
	if it's being destroyed.

	* drivemount.c (destroy_drive_widget):
	Destroy the prop window if it isn't NULL.
	Also remove the update_cb timeout timer
	this fixes a race crash on exit especially
	with multiple applets open.

	(create_drive_widget):
	Set prop_dialog to NULL.

	* drivemount.h:
	Added a GtkWidget *prop_dialog entry to the
	DriveData structure.

2004-02-22  Dennis Smit  <ds@nerds-incorporated.org>
	
	* drivemount.c, drivemount.h, properties.c:
	Have only one icon_list_count instead of
	two for both c files.

	Fixes bug #118677.

	Based on the patch by: berberic@fmi.uni-passau.de.

2004-02-22  Dennis Smit  <ds@nerds-incorporated.org>

	* drivemount.c (browse_cb):
	Move from egg_screen_execute_command_line_async to
	gdk_spawn_command_line_on_screen.

	Fixes bug #135158.

2004-02-10  Dennis Smit  <ds@nerds-incorporated.org>

	* drivemount.c (help_cb):
	Spawm help on the right screen.

	Fixes bug #134019.

2004-02-09 Breda McColgan <breda.mccolgan@sun.com>
