@@ -1,3 +1,10 @@
+2004-06-11  Dennis Smit  <ds@nerds-incorporated.org>
+
+	* properties.c: Fix bug #139949 - change some language for
+	consistency.
+
+	Patch by: Michael Terry  <mike@mterry.name>
+
 2004-04-21  Richard Kinder <r_kinder@yahoo.com>
 	* drivemount.c: Fix bug #135179 - help not displaying from right
 	click on the applet.
